update blog post with a more technical angle
and less sales-pitch approach

--- a/src/components/service-cta.njk
+++ b/src/components/service-cta.njk
@@ -16,6 +16,9 @@
       {% if tag === "design" %}
         {% include "global/interface-inventory-workshop-cta.njk" %}
       {% endif %}
+      {% if tag === "gravity" %}
+        {% include "global/gravity-cta.njk" %}
+      {% endif %}
     {% endfor %}
   {% endif %}
 {%- endmacro -%}
