--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -1,6 +1,14 @@
 ---
-permalink: sitemap.xml
+permalink: /sitemap.xml
 layout: null
 eleventyExcludeFromCollections: true
 ---
-{% sitemap collections.all %}
+<?xml version="1.0" encoding="utf-8"?>
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+    {% for page in collections.all %}
+        <url>
+            <loc>{{ site.url }}{{ page.url | url }}</loc>
+            <lastmod>{{ page.date.toISOString() }}</lastmod>
+        </url>
+    {% endfor %}
+</urlset>
