fix lint errors

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -72,7 +72,10 @@ og:
       <h5 class="mb-015">EuroRust</h5>
       <h3 class="mb-2">We run EuroRust</h3>
       <p>
-        In 2025, EuroRust comes to Paris on October 9th and 10th. We’ll have two days of talks with a main track and a side track as well as impl rooms. Plus, there will be workshops on the day before the main conference, several side activities around the event, as well as our hallmark after party on Friday night.
+        In 2025, EuroRust comes to Paris on October 9th and 10th. We’ll have two days of talks with
+        a main track and a side track as well as impl rooms. Plus, there will be workshops on the
+        day before the main conference, several side activities around the event, as well as our
+        hallmark after party on Friday night.
       </p>
     </div>
   </div>
