change copy writting Gravity Call To Action
Co-authored-by: Marco Otte-Witte <marco.otte-witte@mainmatter.com>

--- a/src/components/global/gravity-cta.njk
+++ b/src/components/global/gravity-cta.njk
@@ -4,10 +4,10 @@ A call-to-action meant to be displayed at the bottom of a blog post.
 {% from "cta-banner.njk" import ctaBanner %}
 {%
   set content = {
-    "title": "Get Started with Gravity today",
-    "subheading": "Gravity is free, so why not give it a try? Head over to Gravity.ci to get started right away.",
+    "title": "Try Gravity Today",
+    "subheading": "Gravity is free for public projects and set up in minutes.",
     "linkUrl": "https://gravity.ci",
-    "linkText": "Start today!"
+    "linkText": "Try Gravity"
   }
 %}
 {{ ctaBanner('purple', 'default', content) }}
