--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -6,9 +6,11 @@ eleventyExcludeFromCollections: true
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   {% for page in collections.all %}
-    <url>
-      <loc>{{ config.url }}{{ page.url | url }}</loc>
-      <lastmod>{{ page.date.toISOString() }}</lastmod>
-    </url>
+    {% if page.url %}
+      <url>
+        <loc>{{ config.url }}{{ page.url | url }}</loc>
+        <lastmod>{{ page.date.toISOString() }}</lastmod>
+      </url>
+    {% endif %}
   {% endfor %}
 </urlset>
