add Gravity to work page

--- a/src/work.njk
+++ b/src/work.njk
@@ -34,7 +34,7 @@ og:
     {{ featuredCaseStudy('qonto', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['bmw-car-it', 'trainline']) }}
     {{ featuredCaseStudy('kisters', 'black', 'work__featured-case-study') }}
-    {{ clientCards(['ais', 'phorest']) }}
+    {{ clientCards(['ais', 'timify']) }}
     {{ featuredCaseStudy('trainline', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['mobimed', 'poellath']) }}
     {{ featuredCaseStudy('experteer', 'black', 'work__featured-case-study') }}
@@ -43,7 +43,7 @@ og:
     {{ clientCards(['hop-skip-drive', 'expedition']) }}
     {{ featuredCaseStudy('mobimed', 'black', 'work__featured-case-study') }}
     {{ clientCards(['neighbourhoodie', 'robin-hood']) }}
-    {{ featuredCaseStudy('timify', 'purple', 'work__featured-case-study') }}
+    {{ featuredCaseStudy('gravity', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['asilimia', 'erdil']) }}
     {{ featuredCaseStudy('expedition', 'black', 'work__featured-case-study') }}
     {{ clientCards(['generali', 'weplan']) }}
@@ -51,7 +51,8 @@ og:
     {{ clientCards(['sutori', 'embedd']) }}
     {{ featuredCaseStudy('ddwrt', 'black', 'work__featured-case-study') }}
     {{ clientCards(['medify', 'experteer']) }}
-    {{ clientCards(['timify', 'aleph-alpha']) }}
+    {{ featuredCaseStudy('timify', 'purple', 'work__featured-case-study') }}
+    {{ clientCards(['phorest', 'aleph-alpha']) }}
     {{ clientCards(['ringler', 'dim3']) }}
     {{ clientCards(['kisters', 'rail-europe']) }}
     {{ clientCards(['sage', 'mvb']) }}
