--- a/src/components/global/gravity-cta.njk
+++ b/src/components/global/gravity-cta.njk
@@ -7,7 +7,8 @@ A call-to-action meant to be displayed at the bottom of a blog post.
     "title": "Try Gravity Today",
     "subheading": "Gravity is free for public projects and set up in minutes.",
     "linkUrl": "https://gravity.ci",
-    "linkText": "Try Gravity"
+    "linkText": "Try Gravity",
+    "class": "cta-banner__gravity"
   }
 %}
 {{ ctaBanner('purple', 'default', content) }}
