add Redis mini case

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -218,7 +218,8 @@ og:
   'KISTERS',
   'BMW Car IT',
   'Faculty',
-  'Otto'
+  'Otto',
+  'Redis'
   ]
 %}
 {% set title = 'We are trusted by international companies that bet on Rust' %}
@@ -264,7 +265,7 @@ og:
   </div>
 </section>
 
-{% set clients = ['aleph-alpha', 'kisters', 'bmw-car-it'] %}
+{% set clients = ['aleph-alpha', 'kisters', 'bmw-car-it', 'redis'] %}
 {{ featuredCaseStudies(clients, 'Browse our work') }}
 
 <section class="my-10 container container--lg">
