--- a/src/work.njk
+++ b/src/work.njk
@@ -28,7 +28,7 @@ og:
   <h2 class="work__title h5">Meet our clients</h2>
   <ul class="work__list">
     {{ featuredCaseStudy('aleph-alpha', 'purple', 'work__featured-case-study') }}
-    {{ clientCards(['clark', 'qonto']) }}
+    {{ clientCards(['redis', 'qonto']) }}
     {{ featuredCaseStudy('rail-europe', 'black', 'work__featured-case-study') }}
     {{ clientCards(['auditboard', 'xbav']) }}
     {{ featuredCaseStudy('qonto', 'purple', 'work__featured-case-study') }}
@@ -56,6 +56,7 @@ og:
     {{ clientCards(['kisters', 'rail-europe']) }}
     {{ clientCards(['sage', 'mvb']) }}
     {{ clientCards(['camilyo', 'cardstack']) }}
+    {{ clientCards(['clark']) }}
   </ul>
 </div>
 
