change overlay to black

--- a/src/work.njk
+++ b/src/work.njk
@@ -49,7 +49,7 @@ og:
     {{ clientCards(['generali', 'weplan']) }}
     {{ featuredCaseStudy('mvb', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['sutori', 'embedd']) }}
-    {{ featuredCaseStudy('ddwrt', 'blank', 'work__featured-case-study') }}
+    {{ featuredCaseStudy('ddwrt', 'black', 'work__featured-case-study') }}
     {{ clientCards(['medify', 'experteer']) }}
     {{ clientCards(['timify', 'aleph-alpha']) }}
     {{ clientCards(['ringler', 'dim3']) }}
