replace marco with sarah

--- a/src/travel.njk
+++ b/src/travel.njk
@@ -188,14 +188,16 @@ og:
         <h5>Book a free call</h5>
         <h3 class="split-content__subheading h2">Looking to transform your company?</h3>
         <p>
-          Mainmatter's Founder and Managing Director, Marco Otte-Witte, is available to give you an
-          in-depth introduction to how we transform companies or share his thoughts on any
-          challenges you're facing.
+          Mainmatter's Director of Business Development, Sarah Lorenz, is available to give you an
+          in-depth introduction to how we transform companies and to discuss how we can support your
+          company's growth, explore collaboration opportunities, or provide insights on overcoming
+          your current business challenges. Book a call with her to discover how Mainmatter can help
+          you move forward.
         </p>
         {%
           set link = {
           "label": 'Book a 1:1 call with us',
-          "url": 'https://calendar.app.google/3FHWr4pdh2kNrZnv9'
+          "url": 'https://calendar.app.google/haxNYTr51eTprbKw5'
           }
         %}
         {{ btnSecondary( link, 'mt-2 plausible-event-name=Travel+1on1+Call' ) }}
@@ -203,8 +205,8 @@ og:
       <div class="split-content__feature">
         {%
           set 'content' = {
-          "image": "/assets/images/authors/marcoow.jpg",
-          "alt": "Marco Otte-Witte",
+          "image": "/assets/images/authors/sarahlorenzu.jpg",
+          "alt": "Sarah Lorenz",
           "loading": "lazy"
           }
         %}
