add UTM params to Gravity links

--- a/src/components/global/gravity-cta.njk
+++ b/src/components/global/gravity-cta.njk
@@ -6,7 +6,7 @@ A call-to-action meant to be displayed at the bottom of a blog post.
   set content = {
     "title": "Try Gravity Today",
     "subheading": "Gravity is free for public projects and set up in minutes.",
-    "linkUrl": "https://gravity.ci",
+    "linkUrl": "https://gravity.ci/?utm_source=mainmatter.com",
     "linkText": "Try Gravity",
     "class": "cta-banner__gravity"
   }
