--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -84,7 +84,8 @@ og:
 {%
   set 'content' = {
   "title": "Signup for our Rust Support Subscription",
-  "text": "Get direct access to our Rust experts for <strong class=\"strong\">4.000€ per month</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong>"
+  "text": "Get direct access to our Rust experts for <strong class=\"strong\">4.000€ per month</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong>",
+  "kind": "rust"
   }
 %}
 {{ subscriptionSignupForm(content) }}
