--- a/src/components/subscription-signup-form.njk
+++ b/src/components/subscription-signup-form.njk
@@ -14,11 +14,11 @@
           data-contact-form
           class="contact-form__form"
           data-status="initial"
-          data-action="https://hooks.zapier.com/hooks/catch/4837956/29yixsv/"
+          data-action="https://hooks.zapier.com/hooks/catch/4837956/2e2ewf5/"
           data-method="get"
           data-goal="Subscription+Contact+{{ content.kind | capitalize }}"
         >
-          <input type="hidden" name="workshop" value="{{ content.kind }}" />
+          <input type="hidden" name="kind" value="{{ content.kind }}" />
           <div data-form-content class="contact-form__field cta__input mb-2 mt-2">
             <input
               class="contact-form__input"
