link to Luca's GitHub

--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -35,7 +35,8 @@ og:
         <h5>Instant Support Without Long-term Commitment</h5>
         <h3 class="split-content__subheading h2">Rust Expertise on a Monthly Subscription</h3>
         <p>
-          Get direct access to our Rust experts, led by Luca Palmieri, without the hassle of
+          Get direct access to our Rust experts, led by
+          <a href="https://github.com/LukeMathWalker">Luca Palmieri</a>, without the hassle of
           long-term contracts or hiring delays. With our subscription,
           <strong class="strong">your team joins our Slack channel</strong> for quick support and
           gets <strong class="strong">2 hours of dedicated expert time each week</strong> for
