fix page meta data

--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -1,7 +1,7 @@
 ---
 layout: base
-title: "Team Up With Us for Rust! | Rust consulting"
-description: Mainmatter enables teams to adopt Rust in their web projects and increase performance, efficiency, and maintainability.
+title: "Rust Support Subscription | A Direct line to Mainmatter's experts"
+description: "Get instant access to our Rust experts: whether you need a quick gut check, a deep code review, or a hands-on pairing session, we’re here to help."
 permalink: /rust-subscription/
 og:
   image: /assets/images/rust/og-image.png
