link from Svelte consulting page

--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -181,6 +181,8 @@ og:
   </div>
 </section>
 
+{% include "global/svelte-subscription-cta.njk" %}
+
 <div class="container container--lg quote-section">
   {%
     set content = {
