--- a/src/svelte-subscription.njk
+++ b/src/svelte-subscription.njk
@@ -36,7 +36,7 @@ og:
         <h3 class="split-content__subheading h2">Svelte Expertise on a Monthly Subscription</h3>
         <p>
           Get direct access to our Svelte experts, led by Svelte maintainer
-          <a href="https://github.com/LukeMathWalker">Paolo Ricciuti</a>, without the hassle of
+          <a href="https://github.com/paoloricciuti">Paolo Ricciuti</a>, without the hassle of
           long-term contracts or hiring delays. With our subscription,
           <strong class="strong">your team joins our Slack channel</strong> for quick support and
           gets <strong class="strong">2 hours of dedicated expert time each week</strong> for
