--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -44,7 +44,7 @@ og:
         </p>
         {%
           set link = {
-          "label": 'Sing up for 4.000€ per month, cancel anytime',
+          "label": 'Sign up today for 4.000€ per month, cancel anytime',
           "url": '#signup-subscription'
           }
         %}
@@ -170,7 +170,7 @@ og:
 {%
   set 'content' = {
   "title": "Sign up",
-  "text": "Sing up for 4.000€ per month, cancel anytime.",
+  "text": "Sign up today for 4.000€ per month, cancel anytime.",
   "linkUrl": "#signup-subscription",
   "linkText": "Sign up"
   }
