--- a/src/components/featured-services.njk
+++ b/src/components/featured-services.njk
@@ -21,7 +21,7 @@
                 {% endif %}
               </a>
             {% else %}
-              <div class="featured-services__link">
+              <div class="featured-services__link--inactive">
                 <div class="featured-services__link-wrap">
                   {% include 'svg/arrow.njk' %}
                   <span class="featured-services__link-text h4">{{ service.heading }}</span>
