--- a/src/svelte-subscription.njk
+++ b/src/svelte-subscription.njk
@@ -21,8 +21,8 @@ og:
   "eyebrow": "A Direct line to Mainmatter's experts",
   "title": "Svelte Support Subscription",
   "text": "Get instant access to our svelte experts: whether you need a quick gut check, a deep code review, or a hands-on pairing session, we’re here to help.",
-  "image": "/assets/images/hero/rust.jpg",
-  "alt": "Crabs climbing a rock on a beach",
+  "image": "/assets/images/hero/svelte-subscribe.jpg",
+  "alt": "Lifebuoys in a pool",
   "loading": "eager"
   }
 %}
