--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -21,8 +21,8 @@ og:
   "eyebrow": "A Direct line to Mainmatter's experts",
   "title": "Rust Support Subscription",
   "text": "Get instant access to our Rust experts: whether you need a quick gut check, a deep code review, or a hands-on pairing session, we’re here to help.",
-  "image": "/assets/images/hero/rust.jpg",
-  "alt": "Crabs climbing a rock on a beach",
+  "image": "/assets/images/hero/rust-subscribe.jpg",
+  "alt": "Crabs arranged in a pattern",
   "loading": "eager"
   }
 %}
