--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -4,7 +4,7 @@ title: "Rust Support Subscription | A Direct line to Mainmatter's experts"
 description: "Get instant access to our Rust experts: whether you need a quick gut check, a deep code review, or a hands-on pairing session, we’re here to help."
 permalink: /rust-subscription/
 og:
-  image: /assets/images/rust/og-image.png
+  image: /assets/images/rust-subscription/og-image.jpg
 ---
 
 {% from "logo-list.njk" import logoList %}
