--- a/src/svelte-subscription.njk
+++ b/src/svelte-subscription.njk
@@ -4,7 +4,7 @@ title: "Svelte Support Subscription | A Direct line to Mainmatter's experts"
 description: "Get instant access to our Svelte experts: whether you need a quick gut check, a deep code review, or a hands-on pairing session, we’re here to help."
 permalink: /svelte-subscription/
 og:
-  image: /assets/images/rust/og-image.png
+  image: /assets/images/svelte-subscription/og-image.jpg
 ---
 
 {% from "logo-list.njk" import logoList %}
