--- a/src/svelte-subscription.njk
+++ b/src/svelte-subscription.njk
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: "Svelte Support Subscription | A Direct line to Mainmatter's experts"
-description: "Get instant access to our Svelte experts: whether you need a quick gut check, a deep code review, or a hands-on pairing session, we’re here to help."
+description: "Reach our team on Slack and get 2h of dedicated time per week – whether you need a quick gut check, a deep code review, or a hands-on pairing session, we’re here to help"
 permalink: /svelte-subscription/
 og:
   image: /assets/images/svelte-subscription/og-image.jpg
