fix EuroRust videos link

--- a/src/services/workshops/rust.njk
+++ b/src/services/workshops/rust.njk
@@ -235,7 +235,7 @@ image: "/assets/images/workshops/rust-og-image.jpg"
   </div>
   <div class="split-content">
     <a
-      href="https://www.youtube.com/playlist?list=PLh5-VpZ3SvUXLJ2xKnT1z12pTAUSgMAu7"
+      href="https://www.youtube.com/@eurorust"
       class="split-content__link"
     ></a>
     <div class="split-content__wrapper">
@@ -244,7 +244,7 @@ image: "/assets/images/workshops/rust-og-image.jpg"
         {%
           set link = {
           "label": 'Learn more',
-          "url": 'https://www.youtube.com/playlist?list=PLh5-VpZ3SvUXLJ2xKnT1z12pTAUSgMAu7'
+          "url": 'https://www.youtube.com/@eurorust'
           }
         %}
         {{ btnSecondary( link, 'mt-2' ) }}
