--- a/src/travel.njk
+++ b/src/travel.njk
@@ -188,7 +188,10 @@ og:
         <h5>Book a free call</h5>
         <h3 class="split-content__subheading h2">Looking to transform your company?</h3>
         <p>
-          Sarah Lorenz, our Director of Business Development, is ready to chat about how Mainmatter can transform your company and support your growth. Let's discuss potential collaboration opportunities and how we can tackle your business challenges together. Schedule a call with Sarah to see how we can help you move forward!
+          Sarah Lorenz, our Director of Business Development, is ready to chat about how Mainmatter
+          can transform your company and support your growth. Let's discuss potential collaboration
+          opportunities and how we can tackle your business challenges together. Schedule a call
+          with Sarah to see how we can help you move forward!
         </p>
         {%
           set link = {
