fix issue on og:image with long bio line

--- a/src/og-image.og.njk
+++ b/src/og-image.og.njk
@@ -39,6 +39,8 @@
 
   .author-bio {
     font-weight: normal;
+    /* this is just to prevent the end of a long bio getting hidden under the logo */
+    width: 95%;
   }
 
   .logo {
