add landing page for rust adoption handbook

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -150,7 +150,7 @@ og:
           "url": 'https://calendly.com/luca-palmieri/talk-to-a-rust-expert'
           }
         %}
-        {{ btnSecondary( link, 'mt-2' ) }}
+        {{ btnSecondary( link, 'mt-2 plausible-event-name=Rust+1on1+Call' ) }}
       </div>
       <div class="split-content__feature">
         {% include 'content/secondary-feature-rust-consulting.njk' %}
