--- a/src/rust-adoption-handbook.njk
+++ b/src/rust-adoption-handbook.njk
@@ -19,7 +19,7 @@ og:
 {%
   set 'content' = {
   "title": "The Rust Adoption Handbook",
-  "text": "Adopting Rust can be challenging. Our handbook is practical guide to why, where, and how to successfully adopt Rust for cloud-native systems.",
+  "text": "Adopting Rust can be challenging. Our handbook is a practical guide to why, where, and how to successfully adopt Rust for cloud-native systems.",
   "image": "/assets/images/photos/travel-hero.jpg",
   "alt": "Lego city scape",
   "loading": "eager"
@@ -33,13 +33,13 @@ og:
       <p class="body">
         We’re Rust experts - our team is led by Luca Palmieri, author of
         <a href="http://zero2prod.com">"Zero to Production in Rust"</a>, and we have been part of
-        the Rust ecosystem for years, helping out the
-        <a href="https://crates.io">crates.io</a> project, and hosting the
+        the Rust ecosystem for years – helping teams succeed with Rust, working on
+        <a href="https://crates.io">crates.io</a>, and hosting the
         <a href="https://eurorust.eu/">EuroRust conference</a>.
       </p>
       <p class="body">
         The Rust Adoption Handbook includes winning strategies for adopting Rust based on our
-        experience working with teams during their Rust journey for years.
+        experience working with teams during their Rust journeys for years.
       </p>
     </div>
   </div>
@@ -49,7 +49,7 @@ og:
   set list =  [{
     "title": "Why: Rust delivers top performance, safety, and maintainability, ideal for cloud-native systems."
   },{
-    "title": "Where: Use Rust in backends, data pipelines, native extensions, and WebAssembly."
+    "title": "Where: Use Rust in backends, data pipelines, native extensions, and as WebAssembly."
   },{
     "title": "How: Upskill your team, start small, and scale with training or expert support."
   }]
@@ -179,6 +179,11 @@ og:
         We support clients in rewriting existing codebases to Rust, using Rust to accelerate hot
         modules in Python, Ruby, Node.js, or other languages, and in building new systems with Rust
         from scratch.
+      </p>
+      <p class="body">
+        We also train teams on Rust, from getting them started from scratch to advanced topics. Find
+        more information on our Rust trainings in our extensive
+        <a href="/services/workshops/rust/">Rust workshops catalog</a>.
       </p>
     </div>
   </div>
