added proper hero image

--- a/src/rust-adoption-handbook.njk
+++ b/src/rust-adoption-handbook.njk
@@ -20,8 +20,8 @@ og:
   set 'content' = {
   "title": "The Rust Adoption Handbook",
   "text": "Adopting Rust can be challenging. Our handbook is a practical guide to why, where, and how to successfully adopt Rust for cloud-native systems.",
-  "image": "/assets/images/photos/travel-hero.jpg",
-  "alt": "Lego city scape",
+  "image": "/assets/images/photos/rust-adoption-handbook-hero.jpg",
+  "alt": "Hand protruding into the picture from the right, touching a crab-shaped Pop-it toy in rainbow colors lying on the table",
   "loading": "eager"
   }
 %}
