disable contat form until initialized

--- a/src/components/contact-form.njk
+++ b/src/components/contact-form.njk
@@ -18,7 +18,7 @@
         data-method="post"
         data-goal="Contact"
       >
-        <div data-form-content tabindex="-1">
+        <fieldset data-form-content tabindex="-1" disabled>
           <div class="contact-form__field">
             <input
               class="contact-form__input"
@@ -101,7 +101,7 @@
             how we can help. We will use this information to prepare a proposal, laying out our
             process and how it would apply to your particular project.
           </p>
-        </div>
+        </fieldset>
         <div class="contact-form__status">
           <button class="contact-form__close" data-reset-form>
             {% include 'svg/close.njk' %}
