--- a/src/components/layouts/workshop.njk
+++ b/src/components/layouts/workshop.njk
@@ -117,64 +117,66 @@ layout: "base"
           data-method="get"
           data-goal="Workshop+Contact"
         >
-          <input type="hidden" name="workshop" value="{{ title }}" />
-          <div data-form-content class="contact-form__field cta__input mb-2 mt-2">
-            <input
-              class="contact-form__input"
-              id="name"
-              type="text"
-              name="name"
-              placeholder="Your name"
-              required
-            />
-            <label class="contact-form__label h4" for="name">
-              Your name
-              <span class="screenreader">(Required)</span>
-            </label>
-            <span class="contact-form__label-required" aria-hidden="true">Required</span>
-          </div>
-          <div class="contact-form__field cta__input mb-2 mt-2">
-            <input
-              class="contact-form__input"
-              id="company"
-              type="text"
-              name="company"
-              placeholder="Your company's name"
-            />
-            <label class="contact-form__label h4" for="name"> Your company's name </label>
-          </div>
-          <div class="contact-form__field cta__input mb-2 mt-2">
-            <input
-              class="contact-form__input"
-              id="email"
-              type="email"
-              name="email"
-              placeholder="Your e-mail"
-              required
-            />
-            <label class="contact-form__label h4" for="email">
-              Your e-mail
-              <span class="screenreader">(Required)</span>
-            </label>
-            <span class="contact-form__label-required" aria-hidden="true">Required</span>
-          </div>
-          <div class="contact-form__field">
-            <textarea
-              class="contact-form__input"
-              id="contact-message"
-              name="message"
-              type="text"
-              placeholder="Tell us about your training needs"
-              rows="8"
-            ></textarea>
-            <label class="contact-form__label h4" for="contact-message">
-              Tell us about your training needs
-            </label>
-          </div>
-          <button class="btn-primary btn-primary--white" type="submit">
-            <span>Get in touch</span>
-            {% include 'svg/arrow.njk' %}
-          </button>
+          <fieldset data-form-content tabindex="-1" disabled>
+            <input type="hidden" name="workshop" value="{{ title }}" />
+            <div data-form-content class="contact-form__field cta__input mb-2 mt-2">
+              <input
+                class="contact-form__input"
+                id="name"
+                type="text"
+                name="name"
+                placeholder="Your name"
+                required
+              />
+              <label class="contact-form__label h4" for="name">
+                Your name
+                <span class="screenreader">(Required)</span>
+              </label>
+              <span class="contact-form__label-required" aria-hidden="true">Required</span>
+            </div>
+            <div class="contact-form__field cta__input mb-2 mt-2">
+              <input
+                class="contact-form__input"
+                id="company"
+                type="text"
+                name="company"
+                placeholder="Your company's name"
+              />
+              <label class="contact-form__label h4" for="name"> Your company's name </label>
+            </div>
+            <div class="contact-form__field cta__input mb-2 mt-2">
+              <input
+                class="contact-form__input"
+                id="email"
+                type="email"
+                name="email"
+                placeholder="Your e-mail"
+                required
+              />
+              <label class="contact-form__label h4" for="email">
+                Your e-mail
+                <span class="screenreader">(Required)</span>
+              </label>
+              <span class="contact-form__label-required" aria-hidden="true">Required</span>
+            </div>
+            <div class="contact-form__field">
+              <textarea
+                class="contact-form__input"
+                id="contact-message"
+                name="message"
+                type="text"
+                placeholder="Tell us about your training needs"
+                rows="8"
+              ></textarea>
+              <label class="contact-form__label h4" for="contact-message">
+                Tell us about your training needs
+              </label>
+            </div>
+            <button class="btn-primary btn-primary--white" type="submit">
+              <span>Get in touch</span>
+              {% include 'svg/arrow.njk' %}
+            </button>
+          </fieldset>
           <div class="contact-form__status">
             <button class="contact-form__close" data-reset-form>
               {% include 'svg/close.njk' %}
