feat: add "Svelte without Svelte" workshop

--- a/src/services/workshops.njk
+++ b/src/services/workshops.njk
@@ -157,6 +157,14 @@ og:
   }
 %}
 {%
+  set 'workshop_18' = {
+  "eyebrow": "Bookable for teams",
+  "title": "Svelte without Svelte",
+  "logo": "svelte",
+  "link": "services/workshops/svelte-without-svelte/"
+  }
+%}
+{%
   set workshops = [
   workshop_1,
   workshop_2,
@@ -174,7 +182,8 @@ og:
   workshop_14,
   workshop_15,
   workshop_16,
-  workshop_17
+  workshop_17,
+  workshop_18
   ]
 %}
 {{
