--- a/src/travel.njk
+++ b/src/travel.njk
@@ -190,15 +190,14 @@ og:
         <h5>Book a free call</h5>
         <h3 class="split-content__subheading h2">Looking to transform your company?</h3>
         <p>
-          Sarah Lorenz, our Director of Business Development, is ready to chat about how Mainmatter
-          can transform your company and support your growth. Let's discuss potential collaboration
-          opportunities and how we can tackle your business challenges together. Schedule a call
-          with Sarah to see how we can help you move forward!
+          Mainmatter's Founder and Managing Director, Marco Otte-Witte, is available to give you an
+          in-depth introduction to how we transform companies or share his thoughts on any
+          challenges you're facing.
         </p>
         {%
           set link = {
           "label": 'Book a 1:1 call with us',
-          "url": 'https://calendar.app.google/haxNYTr51eTprbKw5'
+          "url": 'https://calendar.app.google/3FHWr4pdh2kNrZnv9'
           }
         %}
         {{ btnSecondary( link, 'mt-2 plausible-event-name=Travel+1on1+Call' ) }}
@@ -206,8 +205,8 @@ og:
       <div class="split-content__feature">
         {%
           set 'content' = {
-          "image": "/assets/images/authors/sarahlorenzu.jpg",
-          "alt": "Sarah Lorenz",
+          "image": "/assets/images/authors/marcoow.jpg",
+          "alt": "Marco Otte-Witte",
           "loading": "lazy"
           }
         %}
