--- a/src/assets/css/components/_cta-banner.scss
+++ b/src/assets/css/components/_cta-banner.scss
@@ -137,7 +137,7 @@
 }
 
 .cta-banner__svelteCustomRenderers {
-  background: #191c23;
+  background: #23272f;
 
   h2 {
     margin-bottom: 1.5rem;
@@ -151,12 +151,15 @@
     background-color: #ff3e00;
     color: #fff;
     border-radius: 6rem;
+    gap: 0.5em;
+    padding: 0.85em 1.25em;
   }
 }
 
 .cta__input {
   min-width: 100%;
 }
+
 @media (min-width: $breakpoint-s) {
   .cta__input {
     min-width: 32rem;
