don't mention Barcelona since that's over

--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -77,7 +77,7 @@ og:
         <h4>We co-organize Svelte Summit together with our friends at Svelte Society.</h4>
         {%
           set link = {
-          "label": 'Join us in Barcelona in May 2025!',
+          "label": 'Learn more',
           "url": 'https://www.sveltesummit.com/'
           }
         %}
