add Whirlwind case study to work page

--- a/src/work.njk
+++ b/src/work.njk
@@ -53,6 +53,7 @@ og:
     {{ clientCards(['medify', 'experteer']) }}
     {{ featuredCaseStudy('timify', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['phorest', 'aleph-alpha']) }}
+    {{ featuredCaseStudy('whirlwind', 'black', 'work__featured-case-study') }}
     {{ clientCards(['ringler', 'dim3']) }}
     {{ clientCards(['kisters', 'rail-europe']) }}
     {{ clientCards(['sage', 'mvb']) }}
