--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -4,10 +4,11 @@ A call-to-action meant to be displayed at the beginning of a blog post.
 {% from "cta-banner.njk" import ctaBanner %}
 {%
   set 'content' = {
-  "title": "We are hosting a Svelte week, July 21 to 24...four days of full day Svelte workshops!",
+  "title": "We are hosting a Svelte week, July 21st to 24th...four days of full day Svelte workshops!",
   "text": "Learn how to build fullstack apps with Svelte: auth, testing, migrating to runes and how to introduce Svelte in your non Svelte project",
   "linkUrl": "/events/",
-  "linkText": "See all events!"
+  "linkText": "Get your ticket now!",
+  "class": "cta-banner__svelteWorkshops"
   }
 %}
 {{ ctaBanner('purple', 'default', content) }}
