chore: update CTA and add pitfalls on blog post

--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -4,8 +4,8 @@ A call-to-action meant to be displayed at the beginning of a blog post.
 {% from "cta-banner.njk" import ctaBanner %}
 {%
   set 'content' = {
-  "title": "We are hosting a Svelte week, July 21st to 24th...four days of full day Svelte workshops!",
-  "text": "Learn how to build fullstack apps with Svelte: auth, testing, migrating to runes and how to introduce Svelte in your non Svelte project",
+  "title": "We are hosting Svelte Week on July 21-24...four days of full-day Svelte workshops!",
+  "text": "Learn how to build fullstack apps with Svelte: auth, testing, migrating to runes and how to introduce Svelte in your non Svelte project.",
   "linkUrl": "/events/",
   "linkText": "Get your ticket now!",
   "class": "cta-banner__svelteWorkshops"
